--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@
 }
 
 /* Dark Mode css */
-.darkmoding {
+/* .darkmoding {
   width: 32px;
   height: 30px;
   font-size: 2px !important;
@@ -371,4 +371,106 @@
 .btn-waitlist-dark {
   background-color: white !important;
   color: black !important;
+} */
+
+/* Dark Mode css */
+.darkmoding {
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  font-size: 2px !important;
+}
+.darkmoding svg {
+  width: 15px;
+  height: 15px;
+  margin-left: -3px !important;
+}
+
+.darkmoding svg:last-child{
+  display: none;
+  color: black;
+}
+.logo2{
+  display: none;
+}
+
+.darkModer .logo1{
+  display: none;
+}
+.darkModer .logo2{
+  display: block;
+}
+
+.logo2{
+  margin-bottom: -30px !important;
+}
+.darkModer .darkmoding svg:first-child{
+  display: none;
+}
+
+.darkModer .darkmoding svg:last-child{
+  display: block;
+  color: black;
+}
+
+.darkModer .title-bottom-row{
+  background-color: black;
+}
+
+.darkModer .mid2-left{
+  background-color: rgba(255, 255, 255, 0.131);
+}
+
+ .darkModer .title-bottom-row svg{
+ color: white;
+}
+
+.darkModer .btn-outline-dark:hover{
+  background-color: rgb(178, 178, 178) !important;
+}
+
+.darkModer p{
+ color: white;
+}
+
+.darkModer .accordion {
+  --bs-accordion-btn-bg: black !important;
+  --bs-accordion-btn-color: white !important;
+  --bs-accordion-active-bg: black !important;
+  --bs-accordion-active-color: white;
+}
+
+.darkModer {
+  background: black !important;
+  color: white !important;
+}
+
+.darkModer2 {
+  background: white !important;
+  color: black !important;
+  font-weight: 600;
+}
+
+.nav-li-a,
+.btn-waitlist-dark svg {
+  color: black !important;
+}
+.nav-li-a-dark {
+  color: white !important;
+}
+
+.btn-outline-moder {
+  background-color: white !important;
+}
+.btn-outline-moder2 {
+  background-color: #3b71ca !important;
+}
+
+.btn-waitlist-dark {
+  background-color: white !important;
+  color: black !important;
+}
+
+.mid2-main-h3-dark {
+  color: black;
 }
