--- a/style.css
+++ b/style.css
@@ -6,22 +6,41 @@
 }
 
 /* Navbar */
+
+.nav-main{
+  background-color: white;
+  box-shadow: white 0px 3px 6px, white 0px 3px 6px;
+  
+}
 .btn-login1 {
   padding: 8px 30px !important;
   font-size: 12px !important;
+  transition: transform 1000ms !important;
+
+}
+.btn-login1:hover, .btn-login1:focus-visible {
+  color: #05a0f6 !important;
+  transform: translateY(.50rem);
+  transition: transform 1000ms;
 }
 .btn-signup {
   padding: 9px 26px !important;
   font-size: 11px !important;
   letter-spacing: 1px;
+  transition: transform 1000ms !important;
+}
+.btn-signup:hover, .btn-signup:focus-visible {
+  color: yellow !important;
+  transform: translateY(.50rem);
+  transition: transform 1000ms;
 }
 
 /* Title Section */
 .main-title h1 {
   font-size: 50px;
   letter-spacing: 1px;
-  max-width: 82%;
-  padding-left: 100px !important;
+  max-width: 100%;
+  /* padding-left: 100px !important; */
 }
 
 .main-title p {
@@ -48,6 +67,14 @@
   font-size: 14px !important;
   margin-bottom: -30px;
   letter-spacing: 1px;
+  transition: transform 1000ms !important;
+}
+
+.btn-waitlist:hover, .btn-waitlist:focus-visible {
+  color: #05a0f6 !important;
+  transform: translateY(-0.75rem);
+  transition: transform 1000ms;
+
 }
 
 .title-sec-img-2 svg {
@@ -58,11 +85,11 @@
 /* Title section bottom  FranShares*/
 .title-section-bottom {
   max-width: 80%;
-  margin-left: 190px !important;
+  /* margin-left: 0px !important; */
 }
 
 .title-bottom-row {
-  background-color: #fdedf091;
+  /* background-color: #fdedf091; */
   background-color: #f5f5f7;
   padding: 15px 20px 15px 35px !important;
 }
@@ -119,13 +146,32 @@
 }
 
 /* Middle section 2 -rows - The problem, Our solution  */
-.mid2-right-img img {
-  height: 470px;
+.mid2-right-col{
+  width: 480px !important;
+  overflow: hidden;
+}
+
+.mid2-right-img {
+  overflow: hidden;
+  width: 480px !important;
+}
+
+.mid2-right-img2 {
+  width: 480px !important;
+}
+
+.mid2-right-img img, .mid2-right-img2 img {
+  height: 490px;
   width: 480px;
+  transition: all 3s;
+}
+
+.mid2-right-img img:hover{
+  transform: scale(1.1);
 }
 
 .mid2-left {
-  height: 470px;
+  height: 490px;
   width: 480px;
   padding: 25px;
   background-color: #daf7ff;
@@ -149,6 +195,13 @@
 .btn-Investments {
   font-size: 15px !important;
   padding: 6px 35px !important;
+  transition: transform 1000ms !important;
+}
+
+.btn-Investments:hover, .btn-Investments:focus-visible {
+  color: rgb(255, 213, 0);
+  transform: translateY(-0.75rem);
+  transition: transform 250ms !important;
 }
 
 .carousel-arrows2 button,
@@ -283,6 +336,12 @@
   padding: 12px 22px !important;
   font-size: 15px !important;
   letter-spacing: 1px;
+  transition: transform 1000ms;
+}
+
+.footer-btn:hover, .footer-btn:focus-visible {
+  transform: translateY(0.75rem);
+  transition: transform 500ms !important;
 }
 
 /* Footer Nav  */
@@ -313,6 +372,11 @@
   margin-right: 150px !important;
 }
 
+/* footer .footer-main2{
+  padding-left: 300px ;
+
+} */
+
 .footer-bottom img {
   height: 10px;
   cursor: pointer;
@@ -334,19 +398,99 @@
 
 /* Dark Mode css */
 .darkmoding {
-  width: 32px;
+  padding: 0;
+  width: 30px;
   height: 30px;
+  
   font-size: 2px !important;
 }
 .darkmoding svg {
-  width: 12px;
-  height: 12px;
+  width: 15px;
+  height: 15px;
+  margin-left: -3px !important;
+}
+
+.darkmoding svg:last-child{
+  display: none;
+  color: black;
+}
+.logo2{
+  display: none;
+}
+
+.darkModer .logo1{
+  display: none;
+}
+.darkModer .logo2{
+  display: block;
+}
+
+.logo2{
+  margin-bottom: -30px !important;
+}
+
+
+
+.darkModer .nav-main{
+  background-color: black;
+  box-shadow: black 0px 3px 6px, black 0px 3px 6px;
+
+}
+
+.darkModer .navbar-nav li a:hover{
+  color: rgb(52, 160, 255) !important;
+  box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+  border-radius: 0px;
+
+}
+ .navbar-nav li a:hover{
+  color: rgb(52, 160, 255) !important;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  border-radius: 15px;
+}
+
+
+.darkModer .darkmoding svg:first-child{
+  display: none;
+}
+
+.darkModer .darkmoding svg:last-child{
+  display: block;
+  color: black;
+}
+
+.darkModer .title-bottom-row{
+  background-color: black;
+}
+
+.darkModer .mid2-left{
+  background-color: rgba(255, 255, 255, 0.131);
+}
+
+ .darkModer .title-bottom-row svg{
+ color: white;
+}
+
+.darkModer .btn-outline-dark:hover{
+  background-color: rgb(178, 178, 178) !important;
+}
+
+.darkModer p{
+ color: white;
+}
+
+.darkModer .accordion {
+  --bs-accordion-btn-bg: black !important;
+  --bs-accordion-btn-color: white !important;
+  --bs-accordion-active-bg: black !important;
+  --bs-accordion-active-color: white;
 }
 
 .darkModer {
   background: black !important;
   color: white !important;
 }
+
 .darkModer2 {
   background: white !important;
   color: black !important;
@@ -371,4 +515,78 @@
 .btn-waitlist-dark {
   background-color: white !important;
   color: black !important;
+}
+
+.mid2-main-h3-dark {
+  color: black;
+}
+
+.darkModer .txt-gradient
+ {
+  background: linear-gradient(90deg, #05a0f6, #51bffd) !important;
+ -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent;
+}
+
+
+/* Animations */
+
+/* Scroll Watcher */
+
+.scroll-watcher{
+  height: 13px;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  background-color: rgb(255, 0, 0);
+  width: 100%;
+  scale: 0 1;
+  transform-origin: left;
+  animation: scroll-watcher linear;
+  animation-timeline: scroll();
+}
+
+@keyframes scroll-watcher{
+to{scale:1 1;}
+}
+
+/* Preloader */
+#pre-loader1{
+  background: #fff url(Images/Loading.gif) no-repeat center center;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 5000;
+  }
+
+  /* Text slide Animation */
+.slide-txt{
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 0.5s;
+ }
+ 
+ .slide-txt-show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+/* Scroll Animation for images */
+@keyframes appear{
+  from{
+    opacity: 0;
+    scale:0.5;
+  }
+  to{
+    opacity: 1;
+    scale:1;
+  }
+}
+
+.img-slide1{
+animation: appear linear;
+animation-timeline: view();
+animation-range: entry 0% cover 40%;
 }
