--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,13 @@
 @media screen and (max-width: 500px) {
+
+  html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x:hidden;
+  }
+
   /* Navbar  */
   .btn-nav {
     display: flex;
@@ -166,6 +175,11 @@
     font-size: 10px;
   }
 
+  /* .car-4 h5{
+    font-size: 8px;
+
+  } */
+
   .btn-Investments {
     font-size: 8px !important;
     padding: 0px 8px !important;
@@ -194,7 +208,12 @@
     width: 150px;
   }
 
-  /* Bottom Section Benefits */
+  /* Footer */
+
+  .footer-main2{
+    padding-left:0px !important;
+    margin-left: 0px !important;
+  }
 
   .footer-top h1 {
     font-size: 20px;
@@ -262,6 +281,133 @@
   }
 }
 
+@media screen and (max-width: 1352px) and (min-width: 1101px) {
+
+  /* Main Title */
+  .main-title h1 {
+    font-size: 40px;
+    max-width: 100%;
+    padding-left: 0px !important;
+  }
+
+  .main-title p {
+    max-width: 65%;
+    margin-left: 10%;
+    padding-left: 150px !important;
+  }
+
+   /* Title section images */
+.title-img2 {
+    margin-top: 10%;
+  }
+  .title-img3 {
+    margin-top: 19% !important;
+  }
+
+/* Title section bottom  FranShares*/
+ .title-section-bottom {
+    max-width: 98%;
+    margin-left: 10px !important;
+  }
+
+  /* Middle section Main -- Our impact & achievements */
+  .mid-sec-main h1 {
+    font-size: 40px;
+    max-width: 100%;
+    /* margin-left: -80px; */
+  }
+
+  .mid-right-bottom h1 {
+    font-size: 40px;
+    margin-left: 0px;
+  }
+
+  .mid-right-bottom p {
+    font-size: 13px;
+    width: 100%;
+  }
+
+  .mid-p {
+    max-width: 100%;
+    font-size: 13px;
+  }
+
+  /* Industry verticals- Middle carousel section */
+.carousel-img img {
+  height: 180px;
+  width: 100%;
+}
+
+.carousel-img h5{
+  font-size: 15px;
+}
+  /* Middle section bottom -How it works   */
+  .mid-btm-img img {
+    height: 400px;
+  }
+
+  .mid-sec-btm-img1 {
+    width: 685px;
+  }
+
+  .mid-sec-btm-img2 {
+    width: 120px;
+  }
+
+  .mid-btm-img p {
+    font-size: 15px;
+  }
+  /* Bottom Section Benefits */
+  .btm-sec-topR {
+    max-width: 92% !important;
+  }
+
+  .btm-sec-topR p {
+    font-size: 15px;
+  }
+
+  .benifits-rowL img {
+    width: 420px;
+    height: 790px !important;
+  }
+   /* Footer */
+   .footer-top h1 {
+    font-size: 35px;
+  }
+
+  .footer-nav {
+    width: 95% !important;
+    margin-left: 0px !important;
+  }
+
+  .footer-nav hr {
+    max-width: 87%;
+    margin-left: 60px;
+  }
+
+  .footer-bottom {
+    max-width: 93% !important;
+    padding-right: 300px !important;
+  }
+
+  .logo-footer p {
+    font-size: 10px !important;
+  }
+
+  .company-info {
+    font-size: 8px !important;
+  }
+  .person-img img {
+    width: 50px;
+    height: 50px;
+  }
+
+  footer .footer-main2{
+    padding-left: 80px !important;
+  
+  }
+}
+
 @media screen and (max-width: 1100px) and (min-width: 911px) {
   .main-title h1 {
     font-size: 40px;
@@ -292,7 +438,7 @@
   /* Title section bottom  FranShares*/
   .title-section-bottom {
     max-width: 93%;
-    margin-left: 80px !important;
+    margin-left: 30px !important;
   }
 
   .title-bottom-row p {
@@ -399,10 +545,23 @@
     width: 50px;
     height: 50px;
   }
+  footer .footer-main2{
+    padding-left: 20px !important;
+  
+  }
+  
 }
 
 
 @media screen and (max-width: 910px) and (min-width: 510px) {
+
+  html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
   .main-title h1 {
     font-size: 35px;
     max-width: 100%;
