--- a/style.css
+++ b/style.css
@@ -19,14 +19,17 @@
 .btn-login1 {
   padding: 8px 30px !important;
   font-size: 12px !important;
-  transition: transform 1000ms !important;
-
+  /* transition: transform 1000ms !important; */
+overflow: hidden;
+position: relative;
 }
-.btn-login1:hover, .btn-login1:focus-visible {
+
+
+/* .btn-login1:hover, .btn-login1:focus-visible {
   color: #05a0f6 !important;
   transform: translateY(.50rem);
   transition: transform 1000ms;
-}
+} */
 .btn-signup {
   padding: 9px 26px !important;
   font-size: 11px !important;
@@ -662,6 +665,38 @@
   -webkit-text-fill-color: transparent;
 }
 
+/* Button Animation */
+.darkModer .btn-login1:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: #b9ff66;
+  transition: 0.5s ease-in-out;
+  z-index: -1;
+}
+
+.darkModer .btn-login1:hover:before {
+  left: 0;
+  z-index: -1;
+}
+.darkModer .btn-login1 span {
+  color: black;
+  transition: 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.darkModer .btn-login1:hover span {
+  color: black;
+}
+
+.darkModer .btn-login1:hover{
+  background-color: transparent !important;
+}
+
 
 /* Animations */
 
@@ -738,3 +773,4 @@ animation-range: entry 0% cover 40%;
   padding: 0;
   overflow-x: hidden;
 } */
+
